! Rare bug where the SID constant isn't defined even if session_id() is valid. In my particular case, it was when enabling an official HHVM package. (Subs-Template.php)
! $(document).on('ready') was removed from jQuery 3.0. I'm not sure how this will behave on IE8 and earlier, but I'm sure jQuery deals with them, and the market shares for those are ridiculous by now anyway. (topic.js)

* These notifications are too narrow for me. (index.css)

--- a/core/skins/index.css
+++ b/core/skins/index.css
@@ -1969,7 +1969,7 @@ h6
 			visibility: hidden
 			transform: perspective(500px) translateY(-10px) rotateX(-45deg)
 			transform-origin: 50% 0
-			width: 420px
+			width: 500px
 			min-width: 200px
 			transition: all .3s ease
 			cursor: auto
